# Ragchatbotv2.0

FinancialInsightAI/: Group_19_RAGChatbot(Hybrid Search (Sparse + Dense Retrieval)).py  financial_rag_app_consolidated (1).py  financial_rag_app_consolidated.py  guardrails.py  hybrid_search.py  pyproject.toml  rag_system.py
FinancialInsightAI/FinancialInsightAI/: document_processor.py  guardrails.py  hybrid_search.py  main.py  rag_system.py  test_nltk.py
FinancialInsightAI/FinancialInsightAI/attached_assets/: Pasted-LookupError-Resource-93mpu-1741799801599.txt  Pasted-PyPDF2-errors-DependencyError-PyCryptodome-is-required-for-AES-algorithm-Traceback-File-home-r-1741800437513.txt
FinancialInsightAI/FinancialInsightAI/data/: sample-financial-2023.txt
FinancialInsightAI/attached_assets/: Pasted-Develop-a-Retrieval-Augmented-Generation-RAG-model-to-answer-financial-questions-based-on-company--1741799301557.txt
FinancialInsightAI/data/: README.md
